# the-art-of-readable-code

./: README.md  conveyor_belt.py  main.py  naive.py  pyproject.toml  time_bucket_design.py
.github/workflows/: main.yml
