[project]
name = "the-art-of-readable-code"
version = "0.1.0"
description = "🎼 Designing and Implementing a “Minute/Hour Counter”"
readme = "README.md"
authors = [
    { name = "cassiobotaro", email = "cassiobotaro@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.4"
mypy = "^1.19.1"

